adding css page and bare bones info page

--- a/index.html
+++ b/index.html
@@ -1,4 +1,22 @@
 <!DOCTYPE html>
 <html>
-    
+    <header>
+        <title>Amanda Konenkamp Contact</title>
+    </header>
+
+    <body>
+        <h1>Amanda Konenkamp</h1>
+     <div>
+         <img src="#">
+        <p>
+            Amanda Konenkamp is an Associate Software Developer at Liberty Mutual. 
+        </p>
+        <h2>Contact Info</h2>
+        <ul>
+            <li><strong>EMAIL:<strong></strong><a href="mailto:akonenkamp@gmail.com?Subject=Hello%20again" target="_top">akonenkamp@gmail.com</a></li>
+            <li><strong>Github:</strong><a href="https://github.com/akonenkamp">Akonenkamp</a></li>
+            <li><strong>Portfolio:</strong><a href="#">Coming Soon</a></li>
+        </ul>
+    </div>
+    </body>
 </html>
